Address spacing issues.

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
     font-weight: 500;
     font-style: normal;
     font-size: 26px;
+    margin-bottom: 4px;
   }
 
   .type-large {
